fixed mobile  overflow

--- a/css/style.css
+++ b/css/style.css
@@ -110,11 +110,12 @@ code, pre {
     width: 400px;
     padding: 40px;
     z-index: 100;
-    animation: slideInFromRight 1s ease-in;
+    max-width: 80vw;
 }
 
 .showcase-text {
     animation: slideInFromLeft 1s ease-in;
+    max-width: 100vw;
 }
 
 .showcase-form .form-control {
@@ -322,8 +323,10 @@ code, pre {
     }
 
     .showcase-text {
+        justify-self: center;
         text-align: center;
         margin-top: 40px;
+        max-width: 100vw;
     }
 
     .showcase-form {
